Bug 875719 - Simplify and correct the mechanism of handling call state change event, r=gyeh

1. Remove variable mCurrentCallIndex and replace with using function FindFirstCall(aState)
2. Remove unused variable index and callArrayLength